kubernetes/local/nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "1G"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
    - host: api.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 3000
    - host: argo.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: argo-server
              servicePort: 2746
    - host: docker-registry.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry-ui
              servicePort: 80
    - host: kafka.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: kafdrop
              servicePort: 9000
    - host: minio.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: minio
              servicePort: 9000
    - host: mongo.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: mongoku
              servicePort: 3100
    - host: rabbitmq.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq-rabbitmq-ha
              servicePort: 15672
    - host: registry.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: 5000
    - host: sandbox.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: sandbox
              servicePort: 3000
    - host: www.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: home-ui
              servicePort: 3000
